# qa_guru_python_5_23_mobile_autotests_with_Browserstack_hw

./: README.md  config.personal.env.example  pyproject.toml
