[tool.poetry]
name = "qa-guru-python-5-23-mobile-autotests-with-browserstack-hw"
version = "0.1.0"
description = ""
authors = ["Aleksandr <nikiforov1709@ya.ru>"]
readme = "README.md"
packages = [{include = "qa_guru_python_5_23_mobile_autotests_with_browserstack_hw"}]

[tool.poetry.dependencies]
python = ">=3.10.5"
pytest = ">=7.4.0"
pydantic = ">= 1.10.9"
Appium-Python-Client = ">=2.6.1"
selene = ">=2.0.0rc2"
allure-pytest = ">=2.13.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
